# karafuto-core

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  readme.md
ems-server/: help.txt  package-lock.json  package.json  server.js
ems-server/static/: index.html
mason_packages/linux-x86_64/benchmark/1.3.0/: mason.ini
mason_packages/linux-x86_64/zlib/1.2.8/: mason.ini
misc/: index.html  serve.py
misc/vulkan/shaders/: totex.vert
src/: bindings.hpp  main.cpp
src/core/: MapCore.cpp  MapCore.hpp  World.cpp  World.hpp
src/core/cache/: BaseCache.hpp  LimitedCache.hpp  LimitedSpaceCache.hpp  TimeoutCache.hpp
src/core/contexts/network/: INetworkContext.cpp  INetworkContext.hpp  NetworkContext.cpp  NetworkContext.hpp  NetworkRequest.hpp
src/core/contexts/network/basic/: BasicNetworkContext.cpp  BasicNetworkContext.hpp
src/core/contexts/network/curl/: CURLNetworkContext.cpp  CURLNetworkContext.hpp
src/core/contexts/network/debug/: DebugNetworkContext.cpp  DebugNetworkContext.hpp
src/core/contexts/network/emscripten-fetch/: EmscriptenFetchNetworkContext.cpp  (+1 more)
src/core/contexts/networking/: NetworkContext.cpp  NetworkContext.hpp  NetworkRequest.hpp
src/core/contexts/rendering/: IRenderContext.cpp  IRenderContext.hpp  ImageResult.hpp  RenderContext.cpp  RenderContext.hpp  _TileRenderer.hpp
src/core/contexts/task/: TaskContext.cpp  TaskContext.hpp
src/core/events/: Event.hpp  MapEvent.hpp
src/core/geography/: GeographyConverter.hpp  TileDescription.cpp  TileDescription.hpp
src/core/geography/plain/: PlainCommonTile.cpp  PlainCommonTile.hpp
src/core/geography/tiles/: BaseTile.hpp  CommonTile.hpp  GenericTile.cpp  GenericTile.hpp  MetaTile.hpp
src/core/meshes/: BaseMesh.cpp  BaseMesh.hpp  GridMesh.cpp  GridMesh.hpp  PointMesh.hpp  PolygonMesh.hpp  PolylineMesh.hpp
src/core/misc/: FrustumCulling.hpp  STBImageUtils.hpp  Utils.hpp
src/core/queue/: Queue.hpp
src/core/queue/tasks/: BaseTask.hpp  CallbackTask.hpp  NetworkTask.hpp  RenderTask.cpp  RenderTask.hpp  RenderingTask.cpp  RenderingTask.hpp
src/core/queues/: BaseQueue.hpp
src/core/queues/network/: NetworkQueue.hpp
src/core/queues/rendering/: RenderingQueue.hpp
src/core/queues/tasks/: BaseTask.hpp
src/core/rendering/: Misc.cpp  RenderContext.hpp  TileRenderer.hpp  _TileRenderer.hpp
src/core/rendering/opengl/: Mesh.hpp  Shader.hpp
src/core/sources/: BaseSource.hpp  BaseSourcePart.hpp  BaseSourcePiece.hpp  FileSource.hpp  RemoteSource.cpp  RemoteSource.hpp
src/core/sources/local/: BaseFileSource.hpp  SRTMFileSource.hpp  SRTMFileSourcePiece.hpp  SRTMLocalSource.hpp  TerrainFileSource.hpp
src/core/sources/remote/: BaseRemoteSource.hpp  RasterRemoteSource.hpp
src/core/worlds/: BaseWorld.cpp  BaseWorld.hpp  PlainWorld.cpp  PlainWorld.hpp  TerrainedWorld.cpp  TerrainedWorld.hpp
src/core/worlds/stages/: BuiltInStages.cpp  BuiltinStages.cpp  BuiltinStages.hpp  Stage.cpp  Stage.hpp
src/elevation/: Elevation.cpp  IElevationSource.cpp  IElevationSource.hpp  ISource.hpp
src/elevation/srtm/: SRTMElevation.cpp  SRTMElevation.hpp  SRTMSource.hpp
src/events/: LayerEvent.hpp
src/generics/: IContext.cpp  IContext.hpp
src/geography/: GeographyConverter.hpp  TileDescription.cpp  TileDescription.hpp
src/layer/: Layer.cpp  Layer.hpp  LayerInterface.cpp  LayerInterface.hpp  RemoteSource.cpp  RemoteSource.hpp
src/layer/events/: EventPayloads.cpp  EventPayloads.hpp  LayerEvent.cpp  LayerEvent.hpp
src/layer/presenters/: IRenderContext.cpp  IRenderContext.hpp  ImageResult.hpp
src/layer/presenters/debug/: DebugRenderContext.cpp  DebugRenderContext.hpp
src/layer/presenters/one-to-one/: OneToOneContext.cpp  OneToOneContext.hpp
src/layer/presenters/opencl/: OpenCLRenderContext.cpp  OpenCLRenderContext.hpp  Tile.hpp
src/layer/presenters/vulkan/: Texture.cpp  Texture.hpp  VulkanCore.cpp  VulkanCore.hpp  VulkanRenderContext.cpp  VulkanRenderContext.hpp
src/meshes/: BaseMesh.cpp  BaseMesh.hpp  GridMesh.cpp  GridMesh.hpp  PolygonMesh.hpp  PolylineMesh.hpp
src/misc/: FileTools.hpp  FrustumCulling.hpp  NetworkTools.cpp  NetworkTools.hpp  Requests.hpp  STBImageUtils.hpp  Utils.hpp
src/network/: INetworkAdapter.hpp
src/network/HTTPRequestAdapter/: HTTPRequestNetworkAdapter.cpp  HTTPRequestNetworkAdapter.hpp
src/network/debug/: DebugNetworkAdapter.cpp  DebugNetworkAdapter.hpp
src/network/debug/misc/: DebugNewtorkResources.inl
src/resources/: GeoJSONProcessor.cpp  GeoJSONProcessor.hpp  ISource.hpp
src/resources/elevation/: Elevation.hpp  IElevationSource.cpp  IElevationSource.hpp  IElevationSrc.cpp  IElevationSrc.hpp
src/resources/elevation/geotiff/: MAYBE IN THE FUTURE
src/resources/elevation/srtm/: SRTMElevation.cpp  SRTMElevation.hpp  SRTMSource.cpp  SRTMSource.hpp
src/resources/meshes/: BaseMesh.hpp  GridMesh.cpp  GridMesh.hpp  PolygonMesh.hpp  PolylineMesh.hpp
src/resources/primitives/: GeoJSONObject.hpp  GeoJSONProcessor.cpp  GeoJSONProcessor.hpp  GeoJSONTransObject.hpp
src/resources/primitives/meshes/: BaseMesh.hpp  GridMesh.cpp  GridMesh.hpp  PolygonMesh.hpp  PolylineMesh.hpp
src/scene/: MapCore.cpp  MapCore.hpp  map_core.cpp  map_core.hpp
src/scene/geo/: data_layer.cpp  data_layer.hpp  data_tile.cpp  data_tile.hpp  data_world.cpp  data_world.hpp  geo_converter.hpp
src/scene/geography/: DataTile.cpp  DataTile.hpp  DataWorld.cpp  DataWorld.hpp  GeographyConverter.hpp  data_tile.cpp  data_tile.hpp  data_world.cpp  data_world.hpp  geo_converter.hpp
src/scene/meshes/: GridMesh.cpp  GridMesh.hpp  IMesh.hpp
src/scene/misc/: FrustumCulling.hpp  frustum_culling.hpp  grid_mesh.cpp  grid_mesh.hpp
src/scene/rendering/: TileRenderer.hpp
src/scene/rendering/opengl/: Mesh.hpp  Shader.hpp
src/scene/utils/: frustum_culling.hpp  grid_mesh.hpp
src/sources/: BaseSource.hpp  BaseSourcePart.hpp  FileSource.hpp  RemoteSource.hpp
src/sources/local/geojson/: GeoJSONFileSourcePiece.hpp  GeoJSONLocalSource.cpp  GeoJSONLocalSource.hpp  GeoJSONObject.hpp
src/sources/local/srtm/: SRTMFileSourcePiece.hpp  SRTMLocalSource.cpp  SRTMLocalSource.hpp
(+67 files in other folders)
